k8s/local/deployments/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /api/chat/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat
                port:
                  number: 4000
          - path: /socket
            pathType: Exact
            backend:
              service:
                name: chat
                port:
                  number: 4000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 4000
